[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/server.gd" type="Script" id=1]

[node name="Server" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0745098, 0.0745098, 0.0745098, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 20.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 10.0
margin_top = 16.0
margin_right = 246.0
margin_bottom = 219.0
size_flags_vertical = 3
custom_constants/separation = 15

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 236.0
margin_bottom = 14.0
text = "Server configurations"
align = 1

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 236.0
margin_bottom = 53.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 2

[node name="PortLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 26.0
margin_bottom = 19.0
text = "Port"

[node name="PortTextbox" type="LineEdit" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 36.0
margin_right = 236.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 236.0
margin_bottom = 88.0
text = "Start server"

[node name="Scroll" type="ScrollContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 103.0
margin_right = 236.0
margin_bottom = 203.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LogsList" type="ItemList" parent="CenterContainer/VBoxContainer/Scroll"]
margin_right = 224.0
margin_bottom = 189.0
size_flags_horizontal = 3
size_flags_vertical = 3
items = [ "Item 0alkjs\\n gdaggggggggggggggglskdjglaksjdglakjsdglakjsdglkajsdg", null, false, "Item 1", null, false, "Item 2", null, false, "Item 3", null, false, "Item 4", null, false, "Item 5", null, false, "Item 6", null, false, "Item 7", null, false, "Item 8", null, false, "Item 9", null, false ]
auto_height = true
same_column_width = true
fixed_column_width = 300

[connection signal="pressed" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
